[package]

name = "rgb-liquid"
version =  "1.0.0"
edition = "2018"

[rgb_core]
version = "0.11.0-beta.4"

[dependencies]
amplify = { version = "~4.5.0", features = ["rand"] }
strict_encoding = "~2.6.1"
strict_types = "~1.6.3"
aluvm = { version = "~0.11.0-beta.4", features = ["std"] }
commit_verify = { version = "~0.11.0-beta.4", features = ["rand", "derive"] }
single_use_seals = "~0.11.0-beta.2"
bp-core = { version = "~0.11.0-beta.4" }
secp256k1-zkp = { version = "0.9.2", features = ["rand", "rand-std", "global-context"] } # TODO: Update version before the release
baid58 = "~0.4.4"
mime = "~0.3.17"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
